fix line length in process section on mobile devices

--- a/src/scss/modules/_process.scss
+++ b/src/scss/modules/_process.scss
@@ -23,7 +23,11 @@
 		&:first-child{
 			&:after{
 				top: 50%;
-				height: 50%;
+				height: calc(50% + 1.5rem);
+
+				@include media-breakpoint-up(md){
+					height: 50%;
+				}
 			}
 		}
 
@@ -66,7 +70,7 @@
 			content: '';
 			position: absolute;
 			width: .25rem;
-			height: calc(100%);
+			height: calc(100% + 1.5rem);
 			top: 0;
 			left: 1rem;
 			background-color: rgba($green, .15);
